human-intervention-logs/com.github.curious-odd-man:rgxgen:3.1/gradle-test/gradle-test-2026-05-05T03-06-01-544091Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest FAILED
====================
Testing library: com.github.curious-odd-man:rgxgen:3.1
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:95: error: cannot find symbol
        assertThat(RgxGenOption.DOT_MATCHES_ONLY.getFromProperties(properties).isAsciiOnly()).isTrue();
                                                                              ^
  symbol:   method isAsciiOnly()
  location: class Optional<RgxGenCharsDefinition>
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:97: error: cannot find symbol
                .containsExactly(WhitespaceChar.FORM_FEED, WhitespaceChar.VERTICAL_TAB);
                ^
  symbol:   method containsExactly(WhitespaceChar,WhitespaceChar)
  location: class OptionalAssert<List<WhitespaceChar>>
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:98: error: cannot find symbol
        assertThat(RgxGenOption.CASE_INSENSITIVE.getFromProperties(properties)).isTrue();
                                                                               ^
  symbol:   method isTrue()
  location: class OptionalAssert<Boolean>
3 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:95: error: cannot find symbol
          assertThat(RgxGenOption.DOT_MATCHES_ONLY.getFromProperties(properties).isAsciiOnly()).isTrue();
                                                                                ^
    symbol:   method isAsciiOnly()
    location: class Optional<RgxGenCharsDefinition>
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:97: error: cannot find symbol
                  .containsExactly(WhitespaceChar.FORM_FEED, WhitespaceChar.VERTICAL_TAB);
                  ^
    symbol:   method containsExactly(WhitespaceChar,WhitespaceChar)
    location: class OptionalAssert<List<WhitespaceChar>>
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/tests/src/com.github.curious-odd-man/rgxgen/3.1/src/test/java/com_github_curious_odd_man/rgxgen/RgxgenTest.java:98: error: cannot find symbol
          assertThat(RgxGenOption.CASE_INSENSITIVE.getFromProperties(properties)).isTrue();
                                                                                 ^
    symbol:   method isTrue()
    location: class OptionalAssert<Boolean>
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
13 actionable tasks: 5 executed, 8 up-to-date

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5701-8e8af4dd/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.github.curious-odd-man:rgxgen:3.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
9 actionable tasks: 1 executed, 8 up-to-date
